@@ -16,6 +16,7 @@ export(calculateJSD)
 export(calculateNMDS)
 export(calculateOverlap)
 export(calculateUnifrac)
+export(cluster)
 export(countDominantFeatures)
 export(countDominantTaxa)
 export(estimateDivergence)
@@ -111,6 +112,7 @@ exportMethods(calculateOverlap)
 exportMethods(calculateRDA)
 exportMethods(calculateUnifrac)
 exportMethods(checkTaxonomy)
+exportMethods(cluster)
 exportMethods(countDominantFeatures)
 exportMethods(countDominantTaxa)
 exportMethods(estimateDivergence)
@@ -261,6 +263,7 @@ importFrom(ape,prop.part)
 importFrom(ape,read.tree)
 importFrom(ape,reorder.phylo)
 importFrom(ape,root)
+importFrom(bluster,clusterRows)
 importFrom(decontam,isContaminant)
 importFrom(decontam,isNotContaminant)
 importFrom(dplyr,"%>%")
